css/style2.css
@import url(http://fonts.googleapis.com/css?family=Dosis);

body {
	font-family: 'Dosis';
   clear: both;

}

.container {
	padding: 5% 10% 5% 10%;

}

hr {
	border: none;
    height: 3px;
    /* Set the hr color */
    color: #333; /* old IE */
    background-color: #333; /* Modern Browsers */
    margin: 5% 0 3% 0;
}

.fa {
	color: rgb(34, 238, 187)
}

.fa-comment {
	color: #2b2b2b;
}

.circular {
	 background-repeat: no-repeat;
    background-position: 50%;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    padding: 0 15% 0 15%;
	 -ms-transform: rotate(-10deg); /* IE 9 */
    -webkit-transform: rotate(-10deg); /* Chrome, Safari, Opera */
    transform: rotate(-10deg);
	
	}

.circular:hover {
	opacity: .8;
}

.text-center {
	text-align: center;
}

img {
	max-width: 100%;
}

div#home {
	height: 100vh;
	background: #fafafa;
	position: relative;
	  display: table;
    width: 100%;
}

small {
	font-weight: lighter;
}


div#about {
	height: 100vh;
	background: #fff;
}

div#works {
	min-height: 100%;
	background: #fafafa;
}

div#contact {
	background: rgb(34, 238, 187);
}

#outer {
    display: table;
    width: 100%;
    height: 100%; /* Height can be anything */
}

#hcontent {
	 display: table-cell;
    vertical-align: middle;
    text-align: center;
}

.navbar {
text-align: center;
position: fixed;
z-index: 1;

}

a {
	text-decoration: none;
	color: #2b2b2b;
}

a:hover {

}


/* Overline Reveal */
.hvr-overline-reveal {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
  overflow: hidden;
}
.hvr-overline-reveal:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 0;
  top: 0;
  background: rgb(34, 238, 187);
  height: 3px;
  -webkit-transform: translateY(-4px);
  transform: translateY(-4px);
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.hvr-overline-reveal:hover:before, .hvr-overline-reveal:focus:before, .hvr-overline-reveal:active:before {
  -webkit-transform: translateY(0);
  transform: translateY(0);
}

ul li {
display: inline;
margin: 0 5% 0 5%;
text-transform: uppercase;

}

ul {
	height: 100%;

}

.nav-item{
	padding-top: 5px;
}

.hvr-hollow {
  display: inline-block;
  vertical-align: middle;
  color: rgb(34, 238, 187);
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: background;
  transition-property: background;
  box-shadow: inset 0 0 0 2px #fafafa, 0 0 1px rgba(0, 0, 0, 0);
  /* Hack to improve aliasing on mobile/tablet devices */
}
.hvr-hollow:hover, .hvr-hollow:focus, .hvr-hollow:active {
  background: none;
  color: #fafafa;
}


.nav-logo{
	vertical-align: middle;
}

.hvr-grow {
    display: inline-block;
    vertical-align: middle;
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    transition-duration: 0.3s;
    transition-property: transform;
}

.hvr-grow:hover,
.hvr-grow:focus,
.hvr-grow:active {
    transform: scale(1.03);
}


.btn-email {
	padding: 2% 1% 2% 1%;
	background: #fafafa;
	text-transform: uppercase;
	border-radius: 30px;
}


@media only screen and (max-device-width: 320px) {

h1 {
  font-size: 5.9vw;
}
h2 {
  font-size: 3.0vh;
}

h3 {
  font-size: 2.0vh;
}

h4 {
  font-size: 1.5vh;
}
p {
  font-size: 2vmin;
}
}

